troca do vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,25 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": ".html",
-            "use": "@vercel/static"
-        },
-        {
-            "src": ".css",
-            "use": "@vercel/static"
-        }
+      {
+        "src": "page/*.html",
+        "use": "@vercel/static"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
-        }
+      {
+        "src": "/",
+        "dest": "/page/home.html"
+      },
+      {
+        "src": "/inscription",
+        "dest": "/page/inscription.html"
+      },
+      {
+        "src": "/payments",
+        "dest": "/page/payments.html"
+      }
     ]
   }
+  
   
