--- a/vercel.json
+++ b/vercel.json
@@ -45,6 +45,10 @@
       "dest": "/page/dashboard.html"
     },
     {
+      "src": "/report",
+      "dest": "/page/report.html"
+    },
+    {
       "src": "/style/(.*)",
       "dest": "/style/$1"
     },
