--- a/vercel.json
+++ b/vercel.json
@@ -66,7 +66,7 @@
     },
     {
       "src": "/movimentação",
-      "dest": "/page/Movement.html"
+      "dest": "/page/movement.html"
     },
     {
       "src": "/style/(.*)",
