ajeitando rota movement

--- a/vercel.json
+++ b/vercel.json
@@ -58,7 +58,7 @@
     },
     {
       "src": "/movimentacao",
-      "dest": "/page/hostingPage.html"
+      "dest": "/page/movement.html"
     },
     {
       "src": "/comprovante",
