add dos arquivos para inscricao da conferencia de jovens

--- a/vercel.json
+++ b/vercel.json
@@ -34,7 +34,7 @@
     },
     {
       "src": "/inscricaoJonv",
-      "dest": "/page/inscriptionError.html"
+      "dest": "/page/inscriptionJovem.html"
     },
     {
       "src": "/pagamento",
