Refactor CSS styles and update routing in Vercel configuration
- Enhanced the CSS file with CSS variables for better maintainability and added new styles for maintenance mode.
- Updated the navigation and sidebar styles for improved responsiveness and user experience.
- Changed route paths in the Vercel configuration to reflect new page names and removed obsolete routes.

--- a/vercel.json
+++ b/vercel.json
@@ -33,52 +33,24 @@
       "dest": "/page/home.html"
     },
     {
-      "src": "/register",
-      "dest": "/page/userRegister.html"
+      "src": "/registroUnico",
+      "dest": "/page/inscriptionIndiv.html"
     },
     {
-      "src": "/verify-email",
-      "dest": "/page/verifyEmail.html"
-    },
-    {
-      "src": "/inscricaoServi",
-      "dest": "/page/inscriptionServ.html"
-    },
-    {
-      "src": "/inscricaoJonv",
-      "dest": "/page/inscriptionError.html"
+      "src": "/registroGrupo",
+      "dest": "/page/inscriptionGrup.html"
     },
     {
       "src": "/pagamento",
       "dest": "/page/payment.html"
     },
     {
-      "src": "/documentacao",
-      "dest": "/page/documentation.html"
+      "src": "/historico",
+      "dest": "/page/history.html"
     },
     {
-      "src": "/dashboard",
-      "dest": "/page/dashboard.html"
-    },
-    {
-      "src": "/report",
-      "dest": "/page/report.html"
-    },
-    {
-      "src": "/hospedagem",
-      "dest": "/page/hostingPage.html"
-    },
-    {
-      "src": "/movimentacao",
-      "dest": "/page/movement.html"
-    },
-    {
-      "src": "/comprovante",
-      "dest": "/page/proofPayment.html"
-    },
-    {
-      "src": "/vendas",
-      "dest": "/page/registro_pagamentos.html"
+      "src": "/configuração",
+      "dest": "/page/settings.html"
     },
     {
       "src": "/style/(.*)",
