Refactor sidebar navigation and enhance logout functionality
- Updated sidebar navigation items across multiple pages to maintain consistency in IDs and tooltips.
- Added a logout button to the sidebar with a confirmation prompt before logging out.
- Implemented redirection to the main page after logout.
- Enhanced the styling for the logout button to improve visibility and user experience.
- Updated JavaScript functions to handle navigation and logout actions more effectively.
- Adjusted CSS for maintenance and notification components to improve layout and responsiveness.
- Updated Vercel configuration to ensure proper routing for new paths.

--- a/vercel.json
+++ b/vercel.json
@@ -33,6 +33,10 @@
       "dest": "/page/home.html"
     },
     {
+      "src": "/homeAdmin",
+      "dest": "/page/documentation.html"
+    },
+    {
       "src": "/registroUnico",
       "dest": "/page/inscriptionIndiv.html"
     },
@@ -51,6 +55,10 @@
     {
       "src": "/configuração",
       "dest": "/page/settings.html"
+    },
+    {
+      "src": "/documentação",
+      "dest": "/page/documentation.html"
     },
     {
       "src": "/style/(.*)",
