ajuste de rota documentação

--- a/vercel.json
+++ b/vercel.json
@@ -61,7 +61,7 @@
       "dest": "/page/settings.html"
     },
     {
-      "src": "/documentação",
+      "src": "/documentacao",
       "dest": "/page/documentation.html"
     },
     {
