ajuste da documentação

--- a/vercel.json
+++ b/vercel.json
@@ -83,6 +83,10 @@
     {
       "src": "/download/(.*)",
       "dest": "/downloadimg/$1"
+    },
+    {
+      "src": "/videos/(.*)",
+      "dest": "/videos/$1"
     }
   ]
 }
