ajuste para rodar os videos

--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,10 @@
     {
       "src": "download/**/*",
       "use": "@vercel/static"
+    },
+    {
+      "src": "videos/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
